--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ future: true
 # SNS settings
 RSS: false
 github_username: yuki-1317
-twitter_username: @yukino883756
+twitter_username: yukino883756
 #linkedin_username:  fir
 
 # Build settings
