--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ baseurl: "" # for example, '/blog' if your blog hosted on 'host/blog'
 future: true
 
 # SNS settings
-RSS: false
+RSS: true
 github_username: yuki-1317
 twitter_username: yukino883756
 #linkedin_username:  fir
@@ -39,7 +39,7 @@ anchorjs: true # if you want to customize anchor. check out line:181 of `post.ht
 # from PR#40, to support local preview for Jekyll 3.0
 # make sure you have this gem installed
 # `$ gem install jekyll-paginate`
-plugins: [jekyll-paginate]
+plugins: [jekyll-paginate,jekyll-feed]
 
 # Markdown settings
 # replace redcarpet to kramdown,
